--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -1,5 +1,9 @@
 <html>
+
+
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+
     <link rel="stylesheet" href="$css$" $if(html5)$$else$type="text/css" $endif$/>
 
     <title>$title$</title>
