--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="$css$" $if(html5)$$else$type="text/css" $endif$/>
 
