I relented and used a tiny bit of vanilla javascript to add event listeners to the side note so mobile safari would be happy.

--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -44,5 +44,14 @@
     <div class = 'container'>
         $body$
     </div>
+
+    <script>
+      window.onload = function () {
+        const side_notes = document.getElementsByClassName('side-note');
+        for (let note of side_notes) {
+          note.onClick = () => void(0);
+        }
+      }
+    </script>
   </body>
 </html>
