Turns out not even CSS is safe from my errors.

--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -49,7 +49,7 @@
       window.onload = function () {
         const side_notes = document.getElementsByClassName('side-note');
         for (let note of side_notes) {
-          note.onClick = () => void(0);
+          note.setAttribute("onclick","void(0);");
         }
       }
     </script>
