--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -83,20 +83,32 @@ $body$
 
       }
 
+
       const sidelightboxes = document.getElementsByClassName('side-note lightbox');
-      for (let sidebox of sidelightboxes) {
-        sidebox.addEventListener(
+      for (let sidelightbox of sidelightboxes) {
+        sidelightbox.addEventListener(
           "click", function(el) {
-            const sidebox_classes = this.classList;
-            const is_selected = sidebox_classes.contains('selected');
-            if(is_selected){
-              sidebox_classes.remove('selected');
+          const sidelightbox_classes = this.classList;
+          const is_selected = sidelightbox_classes.contains('selected');
+          if (window.matchMedia("(min-width: 600px)").matches) {
+              if(is_selected){
+                sidelightbox_classes.remove('selected');
+              } else {
+                sidelightbox_classes.add('selected');
+              }
             } else {
-              sidebox_classes.add('selected');
+               if(is_selected){
+                sidelightbox_classes.add('lightbox')
+                sidelightbox_classes.remove('selected');
+              } else {
+                sidelightbox_classes.remove('lightbox')
+                sidelightbox_classes.add('selected');
+              }
             }
           });
 
       }
+
     }
   </script>
   </body>
