Made it so there is a max width that the content plus sidenote and also made the general structure of the css a bit simpler in the process (I think).

--- a/inst/tuftesque.html
+++ b/inst/tuftesque.html
@@ -43,10 +43,9 @@
     $endif$
     </div>
 
-
-    <div class = 'container'>
+    <div class = 'all_content'><div class = 'container'>
 $body$
-    </div>
+    </div></div>
 
     <script>
     window.onload = function () {
